frontend_tests/negative/syntax/go.mod
module example.com/renvotests/negative/syntax

go 1.25
